--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,9 @@ jobs:
     # - run: npm install express-rate-limit
 
     
-    # - name: 'Restart server'
-    #   run: |
-    #       pm2 restart all
+    - name: 'Restart server'
+      run: |
+          pm2 restart eBack
          
          
 
