--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ MY_PASSWORD = "FrankerKelechi@369"
 
 FLW_PUBLIC_KEY = "FLWPUBK_TEST-968ad24101fcac26e1750f77e2a2d46b-X"
 FLW_SECRET_KEY = "FLWSECK_TEST-bb51a7f71f67a65d4cc3e7810d15ccc1-X"
+
+PORT = "https://tea.earnars.com"
