--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "nodemon server.js",
     "dev": "nodemon server.js"
-    
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +16,14 @@
     "dotenv": "^16.1.4",
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "flutterwave-node-v3": "^1.1.6",
     "jsonwebtoken": "^8.5.1",
     "mailgen": "^2.0.27",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
